--- a/src/porfolio/css/styles.css
+++ b/src/porfolio/css/styles.css
@@ -9,21 +9,21 @@
 :root {
     --ff-primary: 'Source Sans Pro', sans-serif;
     --ff-secondary: 'Source Code Pro', monospace;
-    
+
     --fw-reg: 300;
     --fw-bold: 900;
-    
+
     --clr-light: #fff;
     --clr-dark: #303030;
     --clr-accent: #16e0bd;
-    
+
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
-    
-    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
-          0.125em 0.125em 0.25em rgba(0,0,0,.15);
+
+    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
+    0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
 }
 
 @media (min-width: 800px) {
@@ -79,7 +79,9 @@ img {
     transform: scale(1.2);
 }
 
-strong { font-weight: var(--fw-bold) }
+strong {
+    font-weight: var(--fw-bold)
+}
 
 /* Typography */
 
@@ -90,9 +92,17 @@ h3 {
     margin: 0;
 }
 
-h1 { font-size: var(--fs-h1) }
-h2 { font-size: var(--fs-h2) }
-h3 { font-size: var(--fs-h3) }
+h1 {
+    font-size: var(--fs-h1)
+}
+
+h2 {
+    font-size: var(--fs-h2)
+}
+
+h3 {
+    font-size: var(--fs-h3)
+}
 
 
 .section__title {
@@ -122,8 +132,54 @@ h3 { font-size: var(--fs-h3) }
 
 
 /* header */
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+}
 
-nav { display: none; }
+/* navigation */
+
+.logo {
+    /* adapt to my logo */
+    max-width: 150px;
+}
+
+.nav {
+    position: fixed;
+    background: var(--clr-dark);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    color: var(--clr-light);
+
+    transform: translateX(0%);
+    transition: 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.nav__list {
+    list-style: none;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav__link {
+    color: inherit;
+    font-weight: var(--fw-bold);
+    /* adjust size depending to the number of links*/
+    font-size: var(--fs-h2);
+}
+
+.nav__link:hover {
+    color: var(--clr-accent);
+}
 
 /*  Intro section  */
 
@@ -150,14 +206,14 @@ nav { display: none; }
             "img subtitle";
         grid-template-columns: min-content max-content;
     }
-    
+
     .intro__img {
         grid-area: img;
         min-width: 250px;
         position: relative;
         z-index: 2;
-    }    
-    
+    }
+
     .section__subtitle--intro {
         align-self: start;
         grid-column: -1 / 1;
@@ -167,6 +223,12 @@ nav { display: none; }
         left: -1.5em;
         width: calc(100% + 1.5em);
     }
+}
+
+.section__subtitle--work {
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
 }
 
 
@@ -194,6 +256,7 @@ nav { display: none; }
     margin: .5em auto 1em;
     background-color: var(--clr-light);
 }
+
 .services {
     margin-bottom: 4em;
 }
@@ -210,6 +273,7 @@ nav { display: none; }
         margin-left: auto;
         margin-right: auto;
     }
+
     .service + .service {
         margin-left: 2em;
     }
@@ -243,7 +307,7 @@ nav { display: none; }
     }
 
     .section__subtitle--about {
-               grid-column: 1 / -1;
+        grid-column: 1 / -1;
         grid-row: 2;
         position: relative;
         left: -0em;
@@ -260,3 +324,83 @@ nav { display: none; }
 
 }
 
+.my-work {
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    text-align: center;
+
+}
+
+
+.portfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.portfolio__item {
+    background: var(--clr-accent);
+    overflow: hidden;
+}
+
+.portfolio__img {
+    transition: transform 750ms cubic-bezier(.5, 0, .5, 1),
+    opacity 250ms linear;
+}
+
+.portfolio__item:focus {
+    position: relative;
+    z-index: 2;
+}
+
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+    transform: scale(1.2);
+    opacity: .5;
+}
+
+/* footer */
+.footer {
+    background: #111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
+
+}
+
+.footer a {
+    color: inherit;
+    text-decoration: none;
+    font-size: var(--fs-h3);
+
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover {
+    text-decoration: underline;
+}
+
+.footer__link {
+    font-weight: var(--fw-bold);
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+}
+
+.social-list__item {
+    margin: 0 .5em;
+}
+
+.social-list__link {
+    padding: .5em;
+}
