--- a/web/porfolio/css/styles.css
+++ b/web/porfolio/css/styles.css
@@ -35,6 +35,11 @@
     }
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 /* General styles */
 
 html {
@@ -233,7 +238,7 @@ header {
     position: absolute;
     right: 1em;
     top: 1em;
-    z-index: 70;
+    z-index: 1100;
 }
 
 .nav-open .nav {
@@ -431,9 +436,10 @@ header {
 
 }
 
+
+
 .footer a {
-    color: inherit;
-    text-decoration: none;
+
     font-size: var(--fs-h3);
 
 }
@@ -474,11 +480,35 @@ header {
     bottom: 0;
     left: 0;
     right: 0;
+    top: 0;
     padding: 2rem;
-    opacity: 1;
     background: #FFF;
-    transition: opacity .8s ease;
-    z-index: 1000;
+    z-index: 11000;
+    opacity: 0.95;
+
+    transform: translateX(100%);
+    transition: 500ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.consent-open .consent-popup {
+    transform: translateX(0%);
+}
+
+.consent-popup .consent-popup-content {
+   position: relative;
+    text-align: center;
+    top: 50%;
+    font-weight: var(--fw-bold);
+}
+
+.consent-popup__link {
+    cursor: pointer;
+    color: var(--clr-accent);
+    transition: trasnform 200ms ease-in-out;
+}
+
+.consent-popup__link:hover {
+   transform: scale(1.2);
 }
 
 .hidden {
@@ -507,27 +537,6 @@ header {
 .content{
     margin: 0 auto;
     max-width: 1000px;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: rgba(0, 0, 0,0);
-  z-index: 1000;
-}
-
-.modal {
-  position: fixed;
-  top: 25vh;
-  left: 10%;
-  width: 80%;
-  background: white;
-  z-index: 20;
-  border-radius: 10px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
 /* individual */
